# blogick

./: .gitignore  Procfile  manage.py  pyproject.toml  requirements.txt
.ebextensions/: django.config
authentication/: admin.py  forms.py  models.py  signals.py  views.py
authentication/templates/authentication/: login.html  logout.html  other-profile.html  password-reset-complete.html  password-reset-confirmation.html  password-reset-success.html  password-reset.html  profile.html  register.html
blog/: models.py  urls.py  views.py
blog/static/blog/: main.css
blog/templates/blog/: about.html  base.html  home.html  post-delete-confirm.html  post-write.html  post.html
blogick/: asgi.py  settings.py  urls.py  wsgi.py
