[tool.poetry]
name = "blogick"
version = "0.0.1"
description = "A blogging platform for myself so I can better manage the hosting of my written content."
authors = ["Mike A. <jimalik2525@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.2"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
