[tool.poetry]
name = "blogick"
version = "0.0.3"
description = "A blogging platform for myself so I can better manage the hosting of my written content."
authors = ["Mike A. <mmikema.developer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
